--- a/src/CartItem.css
+++ b/src/CartItem.css
@@ -173,12 +173,12 @@
   .cart-item-delete:hover {
     background-color: #cc0000;
   }
-  /* .cart-item-button-dec{
+  .cart-item-button-dec{
     background-color: red;
   }
   .cart-item-button-inc{
     background-color: green;
-  } */
+  } 
   @media (max-width: 768px) {
     .cart-item {
       flex-direction: column; /* Change flex direction to stack items vertically */
@@ -218,6 +218,7 @@
    }
 .continue_shopping_btn{
   margin-top: -50px;
+  color: green;
 }
    @media (max-width: 768px) {
     .cart-container {
